@@ -28,7 +28,7 @@ module Nokogiri
         @doc_started = true if @original_html =~ regex
         return unless @doc_started
 
-        if match = name.match(QNAME_REGEX)
+        if @document.root and match = name.match(QNAME_REGEX)
           prefix, name = match[1], match[2]
           ns = @document.root.namespace_definitions.detect { |x|
             x.prefix == prefix
