@@ -4,6 +4,10 @@
 
   * Added Nokogiri::LIBXML_ICONV_ENABLED
 
+* Bugfixes
+
+  * XML fragments with namespaces do not raise an exception (regression in 1.4.0)
+
 === 1.4.0 / 2009/10/30
 
 * Happy Birthday!
